# call_transcription

./: README.md  analyze.sh  hello.py  pyproject.toml  run.sh
src/: main.py
src/analyzer/: main.py
src/classifier/: main.py
src/processor/: main.py
src/transcriber/: main.py
transcriptions/: darkness.txt
